--- a/search.html
+++ b/search.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <title>Patient Variant Search</title>
@@ -10,45 +11,39 @@
     <link rel="stylesheet" type="text/css"
         href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css" />
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
+    <script type="text/javascript"
+        src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/search.js"></script>
 </head>
 
 <body id="main">
 
-	<h1>Patient Variant Search</h1>
+    <h1>Patient Variant Search</h1>
     <p> Please enter the patient's date of birth and the rs ID of the variant in question below.</p>
     <form name="variant_search" id="variant_search" action="">
         <label for="patient_term">Patient DOB:</label>
-        <input name="patient_term" type="search" value="" autofocus="autofocus" placeholder="YYYY-MM-DD" />
+        <input name="patient_term" type="date"  required>
         <label for="search_term">Variant ID:</label>
-        <input name="search_term" type="search" value="" autofocus="autofocus" placeholder="rs#######"/>
+        <input name="search_term" type="search" autofocus="autofocus" placeholder="rs#######"required>
         <input name="submit" type="submit" id="submit" value="submit">
-    <!--
-    <p> Please select the data that you would like to be shown:</p>
-    <input type = "radio" name = "data" value = "Variant Data" /> Variant Data
-    <input type = "radio" name = "data" value = "Model Data" /> Model Data
-    -->
+
+        <p> Please select the data that you would like to be shown:</p>
+        <input type="radio" id="variant" name="data" value="variant" checked/>
+        <label for="variant">Variant Data</label><br>
+        <input type="radio" id="model" name="data" value="model" />
+        <label for="model">Model Data</label>
+
     </form>
+
     <section id='results'>
         <p>
             <span id='match_count'>0</span> match(es) found.
         </p>
-        <table>
-            <thead>
-                <tr>
-                    <td>Patient Name</td>
-                    <td>Variant ID</td>
-                    <td>Gene ID</td>
-                    <td>Gene Name</td>
-                    <td>Gene Product</td>
-                    <td>Process ID</td>
-                    <td>Process Name</td>
-                    <td>Model ID</td>
-                    <td>Model Name</td>
-                </tr>
+        <table id='results_table'>
+            <thead id='results_header'>
+                <!-- this will be filled in by javascript depending on radio option -->
             </thead>
-            <tbody>
+            <tbody id='results_body'>
                 <!-- this will be filled in by javascript when there are results -->
             </tbody>
         </table>
